# Accurial

./: .bandit  .env  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  devbox.json  flake.nix  mypy.ini  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: code_format.yml  security.yml
.opencode/agent/: backend.md  code_architecture.md  code_goal.md  narrow_agent.md
.opencode/agent/tmp/: backend.md
.opencode/agents/: backend.md  code-reviewer.md  frontend.md  git-commit-pusher.md
deployments/: Dockerfile.dev  Dockerfile.precommit  docker-compose.dev.yml  run_dev.sh
deployments/hooks/: pre-push
documentations/: README.md  pycharm.md
documentations/api/: openapi.md
documentations/architecture/: backend-structure.md  data-flow.md  database.md  overview.md  schema-strategy.md
documentations/backend/: auth.md  error-handling.md  features.md  testing.md  user.md
documentations/deployment/: docker.md
documentations/development/: tooling.md
documentations/development/backend/: adding-a-feature.md  conventions.md
documentations/frontend/: adding-a-feature.md  error-handling.md  setup.md  testing.md
documentations/frontend/architecture/: data-flow.md  folder-structure.md  overview.md  state-management.md
documentations/frontend/conventions/: coding-style.md  components.md  forms.md  hooks.md  routing.md  schemas-and-types.md  services.md  styling.md
documentations/frontend/features/: auth.md  prediction.md  question.md  resolution.md
documentations/getting-started/: environment-setup.md  index.md
sources/backend/: __init__.py  database.py  exceptions.py  logconfig.py  main.py  seeders.py  settings.py
sources/backend/auth/: apis.py  dependencies.py  services.py
sources/backend/debug/: apis.py
sources/backend/prediction/: apis.py  constants.py  models.py  schemas.py  services.py  stores.py
sources/backend/question/: apis.py  constants.py  managers.py  models.py  schemas.py  services.py  stores.py
sources/backend/resolution/: apis.py  constants.py  models.py  schemas.py  services.py  stores.py
sources/backend/user/: apis.py  auth.py  authentification_backends.py  managers.py  models.py  schemas.py  services.py  stores.py
sources/backend/utils/: error_handling.py  fields.py  passwords.py  security.py  status.py
sources/frontend/: .prettierignore  .prettierrc  eslint.config.js  orval.config.ts  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
sources/frontend/app/: App.tsx  index.css  main.tsx
tests/backend/: config.py  conftest.py
tests/backend/debug/: test_apis.py
tests/backend/prediction/: factories.py  test_apis.py  test_status_fsm.py
tests/backend/question/: factories.py  test_apis.py  test_status_fsm.py
tests/frontend/: README.md
(+12 files in other folders)
