[tool.poetry]
name = "projectbase"
version = "0.0.1"
license = ""
description = ""
package-mode = false
authors = ["Aurélien Vezin <aurelien.vezin.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0"}
pendulum = "^3"
SQLAlchemy = "^2"
pydantic = "^2"
pydantic-settings = "^2"
websockets = "^14"
fastapi-filter = "^2"
requests = "^2"
uuid6 = "^2025"
aiocache = "^0"
pydantic-extra-types = "^2"
pycountry = "^24"
beautifulsoup4 = "^4"
lxml = "^5"
asyncpg = "^0"
alembic = "^1"
cryptography = "^46"
pyjwt = "^2"
argon2-cffi = "^25"
psycopg = {extras = ["binary", "pool"], version = "^3"}
loguru = "^0"

[tool.poetry.group.dev.dependencies]
pytest = "^9"
coverage = {extras = ["toml"], version = "^7"}
pytest-cov = "^6"
pytest-mock = "^3"
flake8 = "^7.0.0"
bandit = "^1.7.4"
mypy = "^1.6.1"
pytest-asyncio = "^0"
freezegun = "^1"
factory-boy = "^3"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]

[tool.coverage.report]
fail_under = 5

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
asyncio_mode = "auto"
markers = [
    "anyio: Marks the test as using anyio",
]
pythonpath = [
    "sources"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

